--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,7 @@ apply plugin: 'kotlin'
 sourceCompatibility = 1.8
 
 repositories {
-  maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
-  mavenCentral()
+  jcenter()
 }
 
 dependencies {
@@ -34,4 +33,43 @@ compileKotlin {
 }
 compileTestKotlin {
   kotlinOptions.jvmTarget = "1.8"
+}
+
+subprojects {
+
+  apply plugin: 'java'
+  apply plugin: 'kotlin'
+
+  repositories {
+    jcenter()
+  }
+
+  dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+  }
+
+  sourceSets {
+    main {
+      java {
+        srcDirs = ['src/main/kotlin',
+                   'src/main/java']
+      }
+      resources {
+        srcDirs = ['src/main/resources']
+      }
+    }
+    test {
+      java {
+        srcDirs = ['src/test/kotlin',
+                   'src/main/java']
+      }
+      resources {
+        srcDirs = ['src/test/resources']
+      }
+    }
+  }
+
+
 }
