--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -1,7 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'kotlin'
-
-sourceCompatibility = 1.8
 
 repositories {
   jcenter()
@@ -11,9 +8,8 @@ repositories {
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-  compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+  compile project(':repository')
   compile 'org.jetbrains.exposed:exposed:0.9.1'
   compile 'com.h2database:h2:1.4.196'
-  testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
