Fixed datetime stuff, metrics persist

--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -12,4 +12,9 @@ dependencies {
   compile 'org.jetbrains.exposed:exposed:0.9.1'
   compile 'com.h2database:h2:1.4.196'
 }
+kotlin {
+  experimental {
+    coroutines "enable"
+  }
+}
 
