--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
   compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+  compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
   testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -71,5 +72,10 @@ subprojects {
     }
   }
 
-
+  compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+  }
+  compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+  }
 }
