--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,5 @@ include ':persistence'
 include ':repository'
 include ':network-client'
 include 'controller'
-include 'graphql-server'
+include 'graphql'
 
