--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ subprojects {
 
   apply plugin: 'java'
   apply plugin: 'kotlin'
+  apply plugin: 'idea'
+
+  idea.module.downloadJavadoc = true
 
   repositories {
     jcenter()
