--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -2,15 +2,24 @@ apply plugin: 'java'
 
 repositories {
   jcenter()
-  maven { url "https://dl.bintray.com/kotlin/exposed" }
-  maven { url "https://dl.bintray.com/pgutkowski/Maven" }
+  maven { url 'https://dl.bintray.com/kotlin/exposed' }
+  maven { url 'https://dl.bintray.com/pgutkowski/Maven' }
+  maven { url  'http://dl.bintray.com/kotlin/ktor' }
+  maven { url 'https://dl.bintray.com/kotlin/kotlinx' }
 }
+
+def ktor_version = '0.9.2-alpha-2'
 
 dependencies {
   implementation project(':controller')
   implementation project(':persistence')
   implementation project(':network-client')
   implementation project(':graphql')
+  compile "io.ktor:ktor:$ktor_version"
+  compile "io.ktor:ktor-server-core:$ktor_version"
+  compile "io.ktor:ktor-server-netty:$ktor_version"
+  compile "ch.qos.logback:logback-classic:1.2.1"
+  testCompile "io.ktor:ktor-server-test-host:$ktor_version"
 }
 
 apply plugin: 'application'
