added docker plugin, no idea how docker works or why tho

--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'java'
+apply plugin: 'com.bmuschko.docker-java-application'
 
 repositories {
   jcenter()
   maven { url 'https://dl.bintray.com/kotlin/exposed' }
   maven { url 'https://dl.bintray.com/pgutkowski/Maven' }
-  maven { url  'http://dl.bintray.com/kotlin/ktor' }
+  maven { url 'http://dl.bintray.com/kotlin/ktor' }
   maven { url 'https://dl.bintray.com/kotlin/kotlinx' }
-  maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local'}
+  maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
 }
 
 def ktor_version = '0.9.2-alpha-2'
@@ -33,5 +34,18 @@ defaultTasks 'run'
 kotlin {
   experimental {
     coroutines "enable"
+  }
+}
+
+docker {
+  javaApplication {
+    baseImage = 'dockerfile/java:openjdk-8-jre'
+    maintainer = 'Preston Garno "prestongarno@gmail.com"'
+    ports = rootProject.findProperty("ports")
+            ?.toString()
+            ?.split(',')
+            ?.collect { it.toInteger() } ?: [8080, 8081]
+    //ports = [9090, 5701]
+    tag = 'apis-api:' + rootProject.version
   }
 }
