--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ buildscript {
   ext.kotlin_version = '1.2.30'
 
   repositories {
+    jcenter()
     maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
-    mavenCentral()
   }
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.bmuschko:gradle-docker-plugin:3.2.5'
   }
 }
 
