--- a/network-client/build.gradle
+++ b/network-client/build.gradle
@@ -6,6 +6,6 @@ repositories {
 
 dependencies {
   implementation project(':controller')
-  compile 'com.squareup.retrofit2:retrofit:2.3.0'
-  compile "com.beust:klaxon:2.1.4"
+  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+  implementation "com.beust:klaxon:2.1.4"
 }
