--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.9
 
 repositories {
   jcenter()
@@ -26,7 +26,7 @@ repositories {
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
   compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+  implementation "ch.qos.logback:logback-classic:1.2.1"
   testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -52,6 +52,8 @@ subprojects {
   dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    //implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+    implementation "ch.qos.logback:logback-classic:1.2.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
   }
 
